@@ -1,5 +1,10 @@
 # $Id$
 
+2007-07-07	Konstantin V. Arkhipov
+
+	* main/Flow/MultiPrefixPhpViewResolver.class.php: resolveViewName now
+	throws WrongArgumentException; class is now final.
+
 2007-07-06	Dmitry E. Pismenny
 
 	* main/Flow/RedirectView.class.php: fixed converting boolean value from 
